[package]
name = "filter_json"
version = "0.1.0"
edition = "2024"

[lib]
name = "filter_json"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "filter"
harness = false

[features]
# Activated automatically by maturin when building the Python extension.
extension-module = ["pyo3"]
